# sdcr2024

./: CMakeLists.txt  package.xml
.github/workflows/: build.yml
include/my_examples/: my_publisher.hpp
src/: my_publisher.cpp  my_publisher_main.cpp  publisher_standalone.cpp  subscriber_standalone.cpp
